# networking-sesc

./: .gitignore  QUICKSTART-SSL.md  README-SSL.md  README.md  docker-compose.yml  init-certbot.sh  start.sh
.cursor/rules/: basic.mdc
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: config.py  main.py
backend/app/api/: websocket.py
backend/app/api/admin/: dashboard.py  surveys.py
backend/app/api/teams/: registration.py  survey.py
backend/app/models/: __init__.py  answer.py  participant.py  question.py  quiz.py  survey.py  team.py  vote.py
backend/app/routers/: answer.py  host.py  quiz.py  statistics.py  team.py
backend/app/schemas/: __init__.py  answer.py  question.py  quiz.py  statistics.py  survey.py  team.py
backend/app/services/: answer_service.py  last_question_service.py  qr_service.py  quiz_service.py  statistics_service.py  survey_service.py  team_service.py
backend/app/utils/: websocket_manager.py
backend/app/websocket/: handlers.py  manager.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/src/components/: InviteLink.css  InviteLink.tsx  MultipleChoiceAnswer.css  MultipleChoiceAnswer.tsx  ParticipantForm.css  (+11 more)
nginx/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  init-letsencrypt.sh  nginx-init.conf  nginx-ssl.conf  nginx.conf  obtain-cert.sh  renew-and-reload.sh
nginx/ssl/: .gitkeep  README.md
traefik/: dynamic.yml
(+43 files in other folders)
